--- a/main.html
+++ b/main.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Login Form</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <h1>Login Form</h1>
+  <form id="loginForm">
+    <label for="username">Username:</label>
+    <input type="text" id="username" placeholder="Username">
+    <br>
+    <label for="password">Password:</label>
+    <input type="password" id="password" placeholder="Password">
+    <br>
+    <label for="checkbox">
+      <input type="checkbox" id="checkbox"> Remember me
+    </label>
+    <br>
+    <input type="submit" id="submit" value="Submit">
+  </form>
 
+  <button id="existing">Login as existing user</button>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
